RESOLVED FIXED158094
Fix ResourceTiming multiple entries per resource and test initiator
https://bugs.webkit.org/show_bug.cgi?id=158094
Summary Fix ResourceTiming multiple entries per resource and test initiator
Yoav Weiss
Reported 2016-05-25 14:49:10 PDT
Fix ResourceTiming multiple entries per resource and test initiator
Attachments
Patch (9.59 KB, patch)
2016-05-25 14:55 PDT, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2016-05-25 14:55:14 PDT
WebKit Commit Bot
Comment 2 2016-05-25 22:33:17 PDT
Comment on attachment 279824 [details] Patch Clearing flags on attachment: 279824 Committed r201415: <http://trac.webkit.org/changeset/201415>
WebKit Commit Bot
Comment 3 2016-05-25 22:33:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.